feat: junyoung 0402 (1953) BFS